<resources>
    <string name="app_name">navDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muhammad Shafa Natama</string>
    <string name="nav_header_subtitle">2010817310005@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="content_home"></string>

    <string name="menu_3pointers">Top 3 Pointers 21-22</string>
    <string name="menu_score">Top Scorer 21-22</string>
    <string name="menu_assist">Top Assist Leader 21-22</string>
    <string name="menu_home">Home</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="look_up_words" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_switch_layout">Switch Layout</string>
    <string name="nama1">Wardell Stephen Curry II</string>
    <string name="tim">Team : %s </string>
    <string name="pos">Position : %s</string>
    <string name="jersey">Jersey Number : %s</string>
    <string name="point">3-Point Made : %s | Total : %s</string>
    <string name="hw">Height : %s | Weight : %s</string>
</resources>