<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_3point"
        android:name="com.example.navdrawer.ui.top3pointer.Top3PointerFragment"
        android:label="@string/menu_3pointers"
        tools:layout="@layout/fragment_top_scorer" />

    <fragment
        android:id="@+id/nav_scorer"
        android:name="com.example.navdrawer.ui.topscorer.TopScorerFragment"
        android:label="@string/menu_score"
        tools:layout="@layout/fragment_top3_pointer" />

    <fragment
        android:id="@+id/nav_assistL"
        android:name="com.example.navdrawer.ui.topassist.TopAssistFragment"
        android:label="@string/menu_assist"
        tools:layout="@layout/fragment_top_assist" />
</navigation>